<?xml version="1.0"?>

<package>
  <name>proj1_heron</name>
  <version>0.0.0</version>
  <description>proj1_heron</description>

  <author email="carolina.marques1908@gmail.com">Carolina Marques</author> 
  <maintainer email="carolina.marques1908@gmail.com">Carolina Marques</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_msgs</build_depend>
<build_depend>opencv</build_depend>
<build_depend>std_msgs</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend> 
  <run_depend>gazebo_msgs</run_depend>
<run_depend>opencv</run_depend>
<run_depend>std_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
